--- a/default.conf.template
+++ b/default.conf.template
@@ -23,6 +23,11 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
+      
+      proxy_connect_timeout       300;
+      proxy_send_timeout          300;
+      proxy_read_timeout          300;
+      send_timeout                300;
 
       proxy_pass http://polystore_api/api/;
       proxy_redirect off;
