--- a/default.conf.template
+++ b/default.conf.template
@@ -19,6 +19,8 @@ server {
     }
 
     location /api/ {
+      proxy_http_version 1.1
+    
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
